--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,14 +3,17 @@ spring.application.name=Trading
 server.port=5454
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ trading_with_uday
-spring.datasource.username=uday
-spring.datasource.password=uday$987
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql: true
 
-stripe.api.key=strip key
+frontend.url=${FRONTEND_URL}
 
-razorpay.api.key=rzp_test_haExt5Ft9WQ1ds
-razorpay.api.secret=pqNo88fSnBsNyarfkikGs50r
+stripe.api.key=${STRIPE_API_KEY}
+razorpay.api.key=${RAZORPAY_API_KEY}
+razorpay.api.secret=${RAZORPAY_API_SECRET}
 
