--- a/Backend/.env
+++ b/Backend/.env
@@ -5,3 +5,4 @@ STRIPE_API_KEY=stripe key
 RAZORPAY_API_KEY=rzp_test_haExt5Ft9WQ1ds
 RAZORPAY_API_SECRET=pqNo88fSnBsNyarfkikGs50r
 FRONTEND_URL=http://localhost:5173
+GEMINI_API_KEY=AIzaSyCmvWlop_kET01bZhR_3u5NAiF3bFgjvC8
