--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
+gemini.api.key=${GEMINI_API_KEY}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
