--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -18,3 +18,9 @@ stripe.api.key=${STRIPE_API_KEY}
 razorpay.api.key=${RAZORPAY_API_KEY}
 razorpay.api.secret=${RAZORPAY_API_SECRET}
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=griffinuday@gmail.com
+spring.mail.password=xclqsbqkfaznmjie
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
