--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ razorpay.api.secret=${RAZORPAY_API_SECRET}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=griffinuday@gmail.com
-spring.mail.password=xclqsbqkfaznmjie
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
