perf: Implement caching to prevent rate limiting - Adds @Cacheable to CoinGecko API calls in the service layer. - Sets a 5-minute cache expiry for all cached data to ensure freshness while reducing API load.

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -138,7 +138,10 @@
 			<artifactId>java-dotenv</artifactId>
 			<version>5.2.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 
 	</dependencies>
 
