--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.username=${SMTP_USERNAME}
 spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.cache.cache-names=coinData,coinList,marketChart,coinDetails,searchResults,top50Coins,trendingCoins
+spring.cache.caffeine.spec=expireAfterWrite=5m
