feat: Improve password reset and payment details features
- Enhanced the UI for the Forgot Password and Reset Password forms.
- Implemented the backend logic for the 'Forgot Password' feature.
- Added a feature allowing users to add and edit their payment details.
- Fixed a bug related to the callback URL in PaymentServiceImpl.java.

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 gemini.api.key=${GEMINI_API_KEY}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql: true
 
 frontend.url=${FRONTEND_URL}
